0029834: Coding Rules - eliminate GCC compiler warnings -Wformat-overflow in IGESData_IGESWriter

String buffers have been increased to be sufficient to accommodate result of sprintf() for any possible printed integer values.